--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                             </div>
                         </form>
                         <ul class="nav navbar-nav flex-nowrap ml-auto">
-                            <li class="nav-item dropdown d-sm-none no-arrow"><a class="dropdown-toggle nav-link" data-toggle="dropdown" aria-expanded="false" href="#"><i class="fas fa-search"></i></a>
+                            <li class="nav-item dropdown d-sm-none no-arrow"><a class="dropdown-toggle nav-link" data-toggle="dropdown" aria-expanded="false" href="#"></a>
                                 <div class="dropdown-menu dropdown-menu-right p-3 animated--grow-in" role="menu" aria-labelledby="searchDropdown">
                                     <form class="form-inline mr-auto navbar-search w-100">
                                         <div class="input-group"><input class="bg-light form-control border-0 small" type="text" placeholder="Search for ...">
@@ -135,7 +135,7 @@
                 </nav>
                 <div class="container-fluid">
                     <div class="d-sm-flex justify-content-between align-items-center mb-4">
-                        <h3 class="text-dark mb-0">Data Analysis</h3><a class="btn btn-primary btn-sm d-none d-sm-inline-block" role="button" href="https://github.com/ganeshhulyal1999/SW-Course-Project.git"><i class="fas fa-download fa-sm text-white-50"></i>Download Code</a></div>
+                        <h3 class="text-dark mb-0">Data Analysis</h3><a class="btn btn-primary btn-sm d-inline d-sm-inline-block" role="button" href="https://github.com/ganeshhulyal1999/SW-Course-Project.git" style="margin-top: 50px;"><i class="fas fa-download fa-sm text-white-50"></i>Download Code</a></div>
                     <div
                         class="row">
                         <div class="col-md-6 col-xl-3 mb-4">
