[FEET]-Added New Project

--- a/index.html
+++ b/index.html
@@ -134,8 +134,8 @@
                     </div>
                 </nav>
                 <div class="container-fluid">
-                    <div class="d-sm-flex justify-content-between align-items-center mb-4">
-                        <h3 class="text-dark mb-0">Data Analysis</h3><a class="btn btn-primary btn-sm d-inline d-sm-inline-block" role="button" href="https://github.com/ganeshhulyal1999/SW-Course-Project.git" style="margin-top: 50px;"><i class="fas fa-download fa-sm text-white-50"></i>Download Code</a></div>
+                    <div class="d-sm-flex justify-content-between align-items-center mb-4" style="width: auto;height: 100px;">
+                        <h3 class="text-dark mb-0">Data Analysis</h3><i class="fas fa-download fa-sm text-white-50"></i><a class="btn btn-primary btn-sm d-inline d-sm-inline-block" role="button" href="https://github.com/ganeshhulyal1999/SW-Course-Project.git" style="margin-top: 60px;">Download Code</a></div>
                     <div
                         class="row">
                         <div class="col-md-6 col-xl-3 mb-4">
@@ -237,14 +237,14 @@
                             <li class="list-group-item">
                                 <div class="row align-items-center no-gutters">
                                     <div class="col mr-2">
-                                        <h6 class="mb-0"><strong>While Retriving the Smartphone with 1GB RAM retrives smartphones with 512 MB.</strong></h6>
+                                        <h6 class="mb-0">While Retriving the Smartphone with 1GB RAM retrives smartphones with 512 MB.</h6>
                                     </div>
                                 </div>
                             </li>
                             <li class="list-group-item">
                                 <div class="row align-items-center no-gutters">
                                     <div class="col mr-2">
-                                        <h6 class="mb-0"><strong>Samsung can also be the Television and R<span style="text-decoration: underline;">efrigerators.</span></strong><br><br></h6>
+                                        <h6 class="mb-0">Samsung can also be the Television and R<span style="text-decoration: underline;">efrigerators.</span><br><br></h6>
                                     </div>
                                 </div>
                             </li>
@@ -258,14 +258,14 @@
                             <li class="list-group-item">
                                 <div class="row align-items-center no-gutters">
                                     <div class="col mr-2">
-                                        <h6 class="mb-0"><strong>Sometimes smartphone brands names can results in other products also.</strong></h6>
+                                        <h6 class="mb-0">Sometimes smartphone brands names can results in other products also.</h6>
                                     </div>
                                 </div>
                             </li>
                             <li class="list-group-item">
                                 <div class="row align-items-center no-gutters">
                                     <div class="col mr-2">
-                                        <h6 class="mb-0"><strong>Processor name can be same with different models names.</strong></h6>
+                                        <h6 class="mb-0">Processor name can be same with different models names.</h6>
                                     </div>
                                 </div>
                             </li>
