[FEET]-Added New Project

--- a/table.html
+++ b/table.html
@@ -20,11 +20,12 @@
                 </a>
                 <hr class="sidebar-divider my-0">
                 <ul class="nav navbar-nav text-light" id="accordionSidebar">
-                    <li class="nav-item" role="presentation"><a class="nav-link" href="index.html"><i class="fas fa-home"></i><span>Home</span></a></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link" href="profile.html"></a></li>
-                    <li class="nav-item" role="presentation"></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link" href="login.html"></a></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link" href="register.html"></a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link" href="index.html"><i class="fas fa-home"></i><span>Home</span></a><a class="nav-link" style="width: auto;height: auto;" href="https://github.com/ganeshhulyal1999/SW-Course-Project.git"><i class="fas fa-download"></i><span style="width: auto;height: auto;">Download Code</span></a></li>
+                    <li
+                        class="nav-item" role="presentation"><a class="nav-link" href="profile.html"></a></li>
+                        <li class="nav-item" role="presentation"></li>
+                        <li class="nav-item" role="presentation"><a class="nav-link" href="login.html"></a></li>
+                        <li class="nav-item" role="presentation"><a class="nav-link" href="register.html"></a></li>
                 </ul>
                 <div class="text-center d-none d-md-inline"><button class="btn rounded-circle border-0" id="sidebarToggle" type="button"></button></div>
             </div>
