[FEET]-Added New Project

--- a/profile.html
+++ b/profile.html
@@ -20,7 +20,7 @@
                 </a>
                 <hr class="sidebar-divider my-0">
                 <ul class="nav navbar-nav text-light" id="accordionSidebar">
-                    <li class="nav-item" role="presentation"><a class="nav-link" href="index.html"><i class="fas fa-home"></i><span>Home</span></a><a class="nav-link" style="width: auto;height: auto;" href="https://github.com/ganeshhulyal1999/SW-Course-Project.git"><i class="fas fa-download"></i><span style="width: auto;height: auto;">Download Code</span></a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link" href="index.html"><i class="fas fa-home"></i><span>Home</span></a><a class="nav-link" style="width: auto;height: auto;"><i class="fas fa-download"></i><span style="width: auto;height: auto;">Download Code</span></a></li>
                     <li
                         class="nav-item" role="presentation"><a class="nav-link active" href="profile.html"></a></li>
                         <li class="nav-item" role="presentation"></li>
@@ -276,7 +276,7 @@
             <footer class="bg-white sticky-footer">
                 <div class="card">
                     <div class="card-body bg-light">
-                        <h4 class="text-center text-dark card-title">Implemennation</h4>
+                        <h4 class="text-center text-dark card-title">Implemenation</h4>
                         <ul class="list-group">
                             <li class="list-group-item"><span>As Observing the Data alll the data is in the Key-Value form. Example: processor-name Snapdrogon-626</span></li>
                             <li class="list-group-item"><span>Converted each file to dictonary and made a list of dictonary.</span></li>
