[FIX]-Fixed some changes

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i">
     <link rel="stylesheet" href="assets/fonts/fontawesome-all.min.css">
+    <link rel="stylesheet" href="assets/css/Team-with-rotating-cards.css">
 </head>
 
 <body id="page-top">
@@ -20,9 +21,9 @@
                 </a>
                 <hr class="sidebar-divider my-0">
                 <ul class="nav navbar-nav text-light" id="accordionSidebar">
-                    <li class="nav-item" role="presentation"><a class="nav-link active" href="index.html"><i class="fas fa-home"></i><span>Home</span></a><a class="nav-link active" style="width: auto;height: auto;"><i class="fas fa-download"></i><span style="width: auto;height: auto;">Download Code</span></a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link active" href="index.html"><i class="fas fa-home"></i><span>Home</span></a><a class="nav-link" href="https://github.com/ganeshhulyal1999/SW-Course-Project.git"><i class="fas fa-download"></i><span>Download Code</span></a></li>
                     <li
-                        class="nav-item" role="presentation"><a class="nav-link" href="profile.html"></a></li>
+                        class="nav-item" role="presentation"></li>
                         <li class="nav-item" role="presentation"></li>
                         <li class="nav-item" role="presentation"><a class="nav-link" href="login.html"></a></li>
                         <li class="nav-item" role="presentation"><a class="nav-link" href="register.html"></a></li>
@@ -135,8 +136,9 @@
                     </div>
                 </nav>
                 <div class="container-fluid">
-                    <div class="d-sm-flex justify-content-between align-items-center mb-4" style="width: auto;height: 100px;">
-                        <h3 class="text-dark mb-0">Data Analysis</h3><i class="fas fa-download fa-sm text-white-50"></i></div>
+                    <div class="d-sm-flex justify-content-between align-items-center mb-4" style="width: auto;height: 150px;">
+                        <h3 class="text-dark mb-0">Data Analysis</h3>
+                    </div>
                     <div class="row">
                         <div class="col-md-6 col-xl-3 mb-4">
                             <div class="card shadow border-left-primary py-2">
@@ -199,17 +201,19 @@
                             <div class="card shadow mb-4">
                                 <div class="card-header d-flex justify-content-between align-items-center">
                                     <h6 class="text-primary font-weight-bold m-0">Domain</h6>
-                                    <div class="dropdown no-arrow"><button class="btn btn-link btn-sm dropdown-toggle" data-toggle="dropdown" aria-expanded="false" type="button"><i class="fas fa-ellipsis-v text-gray-400"></i></button>
-                                        <div class="dropdown-menu shadow dropdown-menu-right animated--fade-in"
-                                            role="menu">
+                                    <div class="dropdown no-arrow"><button class="btn btn-link btn-sm dropdown-toggle" data-toggle="dropdown" aria-expanded="false" type="button"></button>
+                                        <div class="dropdown-menu shadow dropdown-menu-right animated--fade-in" role="menu">
                                             <p class="text-center dropdown-header">dropdown header:</p><a class="dropdown-item" role="presentation" href="#">&nbsp;Action</a><a class="dropdown-item" role="presentation" href="#">&nbsp;Another action</a>
                                             <div class="dropdown-divider"></div><a class="dropdown-item" role="presentation" href="#">&nbsp;Something else here</a></div>
                                     </div>
                                 </div>
                                 <div class="card-body">
-                                    <div class="chart-area"><canvas data-bs-chart="{&quot;type&quot;:&quot;doughnut&quot;,&quot;data&quot;:{&quot;labels&quot;:[&quot;Direct&quot;,&quot;Social&quot;,&quot;Referral&quot;],&quot;datasets&quot;:[{&quot;label&quot;:&quot;&quot;,&quot;backgroundColor&quot;:[&quot;#4e73df&quot;,&quot;#1cc88a&quot;,&quot;#36b9cc&quot;],&quot;borderColor&quot;:[&quot;#ffffff&quot;,&quot;#ffffff&quot;,&quot;#ffffff&quot;],&quot;data&quot;:[&quot;50&quot;,&quot;30&quot;,&quot;15&quot;]}]},&quot;options&quot;:{&quot;maintainAspectRatio&quot;:false,&quot;legend&quot;:{&quot;display&quot;:false},&quot;title&quot;:{}}}"></canvas></div>
+                                    <div class="chart-area"><canvas data-bs-chart="{&quot;type&quot;:&quot;doughnut&quot;,&quot;data&quot;:{&quot;labels&quot;:[&quot;Smartphone&quot;,&quot;Television&quot;,&quot;Refrigerators&quot;,&quot;Clothing&quot;],&quot;datasets&quot;:[{&quot;label&quot;:&quot;&quot;,&quot;backgroundColor&quot;:[&quot;#4e73df&quot;,&quot;#1cc88a&quot;,&quot;#36b9cc&quot;,&quot;rgb(201,204,54)&quot;],&quot;borderColor&quot;:[&quot;#ffffff&quot;,&quot;#ffffff&quot;,&quot;#ffffff&quot;,&quot;#ffffff&quot;],&quot;data&quot;:[&quot;50&quot;,&quot;30&quot;,&quot;15&quot;,&quot;5&quot;]}]},&quot;options&quot;:{&quot;maintainAspectRatio&quot;:false,&quot;legend&quot;:{&quot;display&quot;:false},&quot;title&quot;:{}}}"></canvas></div>
                                     <div
-                                        class="text-center small mt-4"><span class="mr-2"><i class="fas fa-circle text-primary"></i>&nbsp;Smartphone</span><span class="mr-2"><i class="fas fa-circle text-success"></i>&nbsp;Televsion</span><span class="mr-2"><i class="fas fa-circle text-info"></i>&nbsp;Fridge</span></div>
+                                        class="text-center small mt-4"><span class="mr-2"><i class="fas fa-circle text-primary"></i>&nbsp;Smartphone</span><span class="mr-2"><i class="fas fa-circle text-success"></i>&nbsp;Televsion</span><span class="mr-2"><i class="fas fa-circle text-info"></i>&nbsp;Fridge</span>
+                                        <span
+                                            class="mr-2"><i class="fas fa-circle text-info"></i>&nbsp;Clothing</span>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -244,7 +248,7 @@
                                 <li class="list-group-item">
                                     <div class="row align-items-center no-gutters">
                                         <div class="col mr-2">
-                                            <h6 class="mb-0">Samsung can also be the Television and R<span style="text-decoration: underline;">efrigerators.</span><br><br></h6>
+                                            <h6 class="mb-0">Samsung can also be the Television and Refrigerators.<br><br></h6>
                                         </div>
                                     </div>
                                 </li>
@@ -286,21 +290,21 @@
                             <div class="col-lg-6 mb-4">
                                 <div class="card text-white bg-info shadow">
                                     <div class="card-body">
-                                        <p class="m-0">Characters in between each words.</p>
+                                        <p class="m-0">Hyphen (-) used&nbsp;in between each words.</p>
                                     </div>
                                 </div>
                             </div>
                             <div class="col-lg-6 mb-4">
                                 <div class="card text-white bg-warning shadow">
                                     <div class="card-body">
-                                        <p class="m-0">More files leads Difficult to transofrm data to dictonary,&nbsp;</p>
+                                        <p class="m-0">Difficulty to convert Given data into dictonary, as there are more files.</p>
                                     </div>
                                 </div>
                             </div>
                             <div class="col-lg-6 mb-4">
                                 <div class="card text-white bg-danger shadow">
                                     <div class="card-body">
-                                        <p class="m-0">Requires more time for processing and Retrival.</p>
+                                        <p class="m-0">Most of&nbsp; the time is spent on data preprocssing and retrival.</p>
                                     </div>
                                 </div>
                             </div>
@@ -315,9 +319,9 @@
                 <div class="card-body bg-light">
                     <h4 class="text-center text-dark card-title">Implemenation</h4>
                     <ul class="list-group">
-                        <li class="list-group-item"><span>As Observing the Data alll the data is in the Key-Value form. Example: processor-name Snapdrogon-626</span></li>
-                        <li class="list-group-item"><span>Converted each file to dictonary and made a list of dictonary.</span></li>
-                        <li class="list-group-item"><span>As we have all the files are in the dictonary format searchinf operation became easy.</span></li>
+                        <li class="list-group-item"><span>As Observing the Data alll the data is in the Key-Value form. Example: processor-name Snapdrogon-625</span></li>
+                        <li class="list-group-item"><span>Each file is converted into the dictonary and then all the dictonories are appended to the list.</span></li>
+                        <li class="list-group-item"><span>By converting eachh file to dictonary it smoothens the searching operation.&nbsp;</span></li>
                         <li class="list-group-item"><span>There are 3 options for the users to search the Devices.&nbsp; User can seach all the Smartphone by entering the <strong>All&nbsp;</strong>&nbsp;keyword.</span></li>
                         <li class="list-group-item"><span>User can search by Model Name and also by entering the required Specifications.</span></li>
                         <li class="list-group-item"><span>Used filter method to retrive the Specications of the Model.&nbsp;</span></li>
@@ -326,6 +330,34 @@
                     <div class="alert alert-success" role="alert"><span class="text-right"><strong>&nbsp;Output Snapshots are Given in the Code Repository.</strong><br></span>
                         <div></div>
                     </div>
+                    <section class="card-section-imagia">
+                        <h1 style="width: auto;">Our team</h1>
+                        <div class="container">
+                            <div class="card-group">
+                                <div class="card"><img class="card-img-top w-100 d-block">
+                                    <div class="card-body">
+                                        <h4 class="card-title">Ganesh Hulyal</h4>
+                                        <p class="card-text"></p>
+                                        <ul>
+                                            <li>USN : 01FE18BCS430</li>
+                                            <li>Roll No: 285</li>
+                                            <li>Division: D</li>
+                                        </ul>
+                                    </div>
+                                </div>
+                                <div class="card"><img class="card-img-top w-100 d-block">
+                                    <div class="card-body">
+                                        <h4 class="card-title">Tanaya</h4>
+                                        <ul>
+                                            <li>USN : 01FE17BCS228</li>
+                                            <li>Roll No: 254</li>
+                                            <li>Division: D</li>
+                                        </ul>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </section>
                 </div>
             </div>
             <div></div>
