--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@
                                 </div>
                                 <div class="card"><img class="card-img-top w-100 d-block">
                                     <div class="card-body">
-                                        <h4 class="card-title">Tanaya</h4>
+                                        <h4 class="card-title">Tanaya Nagekar</h4>
                                         <ul>
                                             <li>USN : 01FE17BCS228</li>
                                             <li>Roll No: 254</li>
